--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a-frame-in-100-lines",
-  "version": "0.1.1",
+  "version": "0.6.0",
   "scripts": {
     "build": "rm -rf .next && next build",
     "dev": "next dev",
@@ -9,12 +9,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "@zizzamia",
+  "author": "https://twitter.com/Zizzamia",
   "license": "MIT",
   "dependencies": {
-    "@coinbase/onchainkit": "0.6.2",
+    "@coinbase/onchainkit": "0.7.0",
+    "graphql": "14",
+    "graphql-request": "6",
     "next": "13.5.6",
-    "react-dom": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "viem": "^2.7.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
